Add, new algorithms

--- a/anotacoes.html
+++ b/anotacoes.html
@@ -1,1 +1,12 @@
 Comandos de Entradas = entrar com dados no computador.
+
+Orden de procedência:
+()
+
+ˆ
+* /
++ - 
+
+Operadores relacionais
+> => maior
+< => menor
